--- a/TextReplacer/Properties/Resources.resx
+++ b/TextReplacer/Properties/Resources.resx
@@ -118,13 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="default-minus_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\default-minus_16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="default-close_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\default-close_16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="default-minus_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\default-minus_16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="default-swap_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\default-swap_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dark-swap_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\dark-swap_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
